[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spawn/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Spawn/BlackHole/BlackHole.png" type="Texture" id=2]
[ext_resource path="res://Spawn/SummonCircle/SummonCircle.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 7, 8, 9 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spawn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="BlackHole" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 10
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackHole"]
anims/Fade = SubResource( 1 )
anims/Spawn = SubResource( 2 )

[node name="SummonCircle" parent="." instance=ExtResource( 3 )]
editor/display_folded = false

[node name="SummonTimer" type="Timer" parent="."]
one_shot = true

